<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timer">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="264dp"
        android:layout_height="144dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/swipeup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Timermin" />

    <EditText
        android:id="@+id/Timerhour"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="10dp"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/Timermin"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Timermin"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="8dp"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Timerseconds"
        android:layout_width="95dp"
        android:layout_height="63dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="171dp"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/Timermin"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="8dp"
        android:text="@string/M"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="125dp"
        android:text="@string/S"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="85dp"
        android:text="@string/H"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/layoutid"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>