<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/pausetimesec"
        android:layout_width="61dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:editable="true"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/pausetimemin"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/S"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/beepmin"
        android:layout_width="61dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:editable="true"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pausetimerafter"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beepmin" />

    <EditText
        android:id="@+id/pauselengthsec"
        android:layout_width="61dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:editable="true"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/pauselengthmin"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/beephour"
        android:layout_width="61dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:editable="true"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/beepmin"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:text="@string/H"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/M"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/Instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Instruction"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcomemessage" />

    <EditText
        android:id="@+id/pauselengthmin"
        android:layout_width="61dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:editable="true"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/Startbutton"
        android:layout_width="247dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Start"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pauselengthmin" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/M"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Timer" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/S"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/timersec"
        android:layout_width="58dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:editable="true"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/timermin"
        app:layout_constraintTop_toBottomOf="@+id/Timer" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/S"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/Timer" />

    <EditText
        android:id="@+id/pauselengthhour"
        android:layout_width="61dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:editable="true"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/pauselengthmin"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:text="@string/H"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/pausetimehour"
        android:layout_width="61dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:editable="true"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/pausetimemin"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:text="@string/H"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/Timer" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/andfor"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pausetimemin" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/beepafter"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timermin" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/M"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/S"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/pausetimemin"
        android:layout_width="61dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:editable="true"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/Timer"
        android:layout_width="118dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Timer"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Instruction" />

    <EditText
        android:id="@+id/beepsec"
        android:layout_width="61dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:editable="true"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/beepmin"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:text="@string/H"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/timerHour"
        android:layout_width="58dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:editable="true"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/timermin"
        app:layout_constraintTop_toBottomOf="@+id/Timer" />

    <EditText
        android:id="@+id/timermin"
        android:layout_width="58dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:editable="true"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Timer" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/M"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/Welcomemessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Welcomemessage"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>